sginfo/sginfo.h

const char *SgError = NULL;
#define STBF 12 /* Seitz           Matrix Translation Base Factor */
/* CAUTION: (CTBF / STBF) has to be an INTEGER */


typedef struct
  {
    int  Code;
    int  nTrVector;
    int  *TrVector;
  }
  T_LatticeInfo;
typedef union
  {
    struct { int R[9], T[3]; } s;
    int                        a[12];
  }
  T_RTMx;
typedef struct
  {
    int  EigenVector[3];
    int  Order;
    int  Inverse;
    int  RefAxis;
    int  DirCode;
  }
  T_RotMxInfo;
typedef struct
  {
    const char  *HallSymbol;
    int         SgNumber;
    const char  *Extension;
    const char  *SgLabels;
  }
  T_TabSgName;
typedef struct
  {
    int                  GenOption;
    int                  Centric;
    int                  InversionOffOrigin;
    const T_LatticeInfo  *LatticeInfo;
    int                  StatusLatticeTr;
    int                  OriginShift[3];
    int                  nList;
    int                  MaxList;
    T_RTMx               *ListSeitzMx;
    T_RotMxInfo          *ListRotMxInfo;
    int                  OrderL;
    int                  OrderP;
    int                  XtalSystem;
    int                  UniqueRefAxis;
    int                  UniqueDirCode;
    int                  ExtraInfo;
    int                  PointGroup;
    int                  nGenerator;
    int                   Generator_iList[4];
    char                 HallSymbol[MaxLenHallSymbol + 1];
    const T_TabSgName    *TabSgName;
    const int            *CCMx_LP;
    int                  n_si_Vector;
    int                  si_Vector[9];
    int                  si_Modulus[3];
  }
  T_SgInfo;
int Add2ListSeitzMx(T_SgInfo *SgInfo, const T_RTMx *NewSMx);
int AddInversion2ListSeitzMx(T_SgInfo *SgInfo);
void InitSgInfo(T_SgInfo *SgInfo);
int CompleteSgInfo(T_SgInfo *SgInfo);
void PrintTabSgNameEntry(const T_TabSgName *tsgn, int Style, int space,
                         FILE *fpout);
const char *RTMx2XYZ(const T_RTMx *RTMx, int FacRo, int FacTr,
                     int Decimal, int TrFirst, int Low,
                     const char *Seperator,
                     char *BufferXYZ, int SizeBufferXYZ);